--- a/helm/coinbase-train/templates/jupyter_service.yaml
+++ b/helm/coinbase-train/templates/jupyter_service.yaml
@@ -1,5 +1,5 @@
 ---
-{{if .Values.notebook.enabled}}
+{{if gt .Values.notebook.num_cpus 0.0}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -30,4 +30,3 @@ spec:
           serviceName: {{.Release.Name}}-notebook-train
           servicePort: 8888
 {{end}}
-
