--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 
 variables:
   NEXT_RELEASE_TYPE: minor
-  RELEASE_NAME: coinbase-btc-usd
+  RELEASE_NAME: coinbase-btc-usd-train
 
 .create_credentials_ini_file: &create_credentials_ini_file |
   cat << EOF > gitlab_credentials.ini
@@ -24,6 +24,7 @@ variables:
   --force
   --set moonraker-common.registry.username=$CI_USERNAME
   --set moonraker-common.registry.password=$CI_TOKEN
+  --set service_account_json=$SERVICE_ACCOUNT_JSON
 
 increment_version:increment_version:
   extends: .increment_version
