Update helm/coinbase-train/values.yaml, helm/coinbase-train/templates/coinbase_train_job.yaml files

--- a/helm/coinbase-train/templates/coinbase_train_job.yaml
+++ b/helm/coinbase-train/templates/coinbase_train_job.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-{{.Chart.Version | trunc 12}}
+  name: {{.Release.Name}}-{{randAlphaNum 10}}
   labels:
     app: train
 spec:
