--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.0.0-experimental
-FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:0.1.0-8fd9966f2210af4fcd5e67f402964c0718f2997c
+FROM python:3.6
 
 ENV PYTHONPATH=/app
 
@@ -10,4 +10,6 @@ ADD ./ /app
 WORKDIR /app
 
 RUN --mount=type=secret,id=gitlab_credentials.ini \
+    apt-get update && \
+	apt-get install -y git && \
 	python3 setup.py install
