--- a/helm/coinbase-train/templates/coinbase_train_job.yaml
+++ b/helm/coinbase-train/templates/coinbase_train_job.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-{{randAlphaNum 10}}
+  name: {{.Release.Name}}-{{randAlphaNum 10 | lower}}
   labels:
     app: train
 spec:
