--- a/helm/coinbase-train/templates/mongodb_secret.yaml
+++ b/helm/coinbase-train/templates/mongodb_secret.yaml
@@ -3,8 +3,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{$release_name}}-service-account-json
+  name: {{$release_name}}-mongodb-credentials
   app: train
 type: Opaque
 data:
-  service-account.json: {{.Values.service_account_json}}
+  mongodb-url: {{.Values.mongodb_url | b64enc}}
