--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[aliases]
+test=pytest
+
 [mypy]
-strict_optional = False
-ignore_missing_imports = True
+strict_optional=False
+ignore_missing_imports=True
+
+[pylint]
+disable=C0330, W0511
+good-names=h, i, j, f, x, s, t, ps, vs, pb, vb
+max-args=10
+max-attributes=15
+max-locals=30
+min-public-methods=0
