--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -3,8 +3,6 @@ FROM python:3.6
 
 ENV PYTHONPATH=/app
 
-RUN mkdir /var/log/sacred_tensorboard /var/moonraker_models
-
 ADD ./ /app
 
 WORKDIR /app
@@ -12,4 +10,5 @@ WORKDIR /app
 RUN --mount=type=secret,id=gitlab_credentials.ini \
     apt-get update && \
 	apt-get install -y git && \
-	python3 setup.py install
+	python3 setup.py install && \
+	chmod -R o+rx /usr/local/lib/python3.6/site-packages/ray*
