--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,9 @@
 test=pytest
 
 [mypy]
+check_untyped_defs=True
+disallow_incomplete_defs=True
+disallow_untyped_defs = True
 strict_optional=False
 ignore_missing_imports=True
 
