--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,9 @@ disallow_untyped_defs = True
 strict_optional=False
 ignore_missing_imports=True
 
+[mypy-coinbase_train.experiment]
+disallow_untyped_defs = False
+
 [pylint]
 disable=C0330, W0511
 good-names=h, i, j, f, x, s, t, ps, vs, pb, vb
