--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ include:
     ref: master
 
 stages:
-  - increment_version
   - build
   - deploy
 
@@ -28,13 +27,10 @@ variables:
   --set service_account_json=$SERVICE_ACCOUNT_JSON
   --set ENVIRONMENT=staging/$CI_COMMIT_REF_NAME
 
-increment_version:increment_version:
-  extends: .increment_version
-
 build:run_tests:
   extends: .base_test
 
-  image: python:3.6
+  image: registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:0.1.0-451cbb610be538121752bc16a748b697cfedceb1
 
   script:
     - make install
