--- a/setup.cfg
+++ b/setup.cfg
@@ -8,13 +8,14 @@ disallow_untyped_defs = True
 strict_optional=False
 ignore_missing_imports=True
 
-[mypy-coinbase_train.experiment]
+[mypy-coinbase_train.experiment_configs.*]
 disallow_untyped_defs = False
 
 [pylint]
-disable=C0330, W0511
+disable=C0330, R0801, W0511
 good-names=h, i, j, f, x, s, t, ps, vs, pb, vb
 max-args=10
-max-attributes=15
+max-attributes=20
 max-locals=30
 min-public-methods=0
+min-similarity-lines=8
