--- a/setup.cfg
+++ b/setup.cfg
@@ -8,12 +8,15 @@ disallow_untyped_defs = True
 strict_optional=False
 ignore_missing_imports=True
 
-[mypy-coinbase_train.experiment_configs.*]
+[mypy-coinbase_ml.train.experiment_configs.*]
+disallow_untyped_defs = False
+
+[mypy-coinbase_ml.serve.experiment_configs.*]
 disallow_untyped_defs = False
 
 [pylint]
 disable=C0330, R0801, W0511
-good-names=h, i, j, f, x, s, t, ps, vs, pb, vb
+good-names=T, h, i, j, f, x, s, t, pa, va, pb, vb, dt
 max-args=10
 max-attributes=20
 max-locals=30
