Wrote Helm chart to deploy serving application

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ secrets.env
 venv/
 gitlab_credentials.ini
 .ipynb_checkpoints
-helm/coinbase-train/charts
-helm/coinbase-train/requirements.lock
+helm/*/charts
+helm/*/requirements.lock
 coinbase-train*.tgz
 .eggs
 .mypy_cache
