--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ disallow_incomplete_defs=True
 disallow_untyped_defs = True
 strict_optional=False
 ignore_missing_imports=True
+no_implicit_optional=True
 
 [mypy-coinbase_ml.train.experiment_configs.*]
 disallow_untyped_defs = False
@@ -15,7 +16,7 @@ disallow_untyped_defs = False
 disallow_untyped_defs = False
 
 [pylint]
-disable=C0330, R0801, W0511
+disable=C0330, R0401, R0801, W0511
 good-names=T, h, i, j, f, x, s, t, pa, va, pb, vb, dt
 max-args=10
 max-attributes=20
