Fix serve deploy so it accepts sandbox api key correctly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,7 +123,11 @@ deploy:delete_coinbase_train:
   --set COINBASE_API_KEY_B64SECRET=${COINBASE_API_KEY_B64SECRET}
   --set COINBASE_API_KEY_PASSPHRASE=${COINBASE_API_KEY_PASSPHRASE}
   --set COINBASE_API_KEY_NAME=${COINBASE_API_KEY_NAME}
-  --set ENVIRONMENT=staging/serve-$CI_COMMIT_REF_NAME"
+  --set ENVIRONMENT=staging/serve-$CI_COMMIT_REF_NAME
+  --set SANDBOX_COINBASE_API_KEY_B64SECRET=${SANDBOX_COINBASE_API_KEY_B64SECRET}
+  --set SANDBOX_COINBASE_API_KEY_PASSPHRASE=${SANDBOX_COINBASE_API_KEY_PASSPHRASE}
+  --set SANDBOX_COINBASE_API_KEY_NAME=${SANDBOX_COINBASE_API_KEY_NAME}"
+
 
 deploy:deploy_coinbase_serve:
   before_script:
