--- a/helm/coinbase-ml-serve/templates/coinbase_api_secret.yaml
+++ b/helm/coinbase-ml-serve/templates/coinbase_api_secret.yaml
@@ -6,6 +6,12 @@ metadata:
   name: {{$release_name}}-coinbase-api-key
 type: Opaque
 data:
+  {{- if .Values.use_sandbox_api}}
+  COINBASE_API_KEY_B64SECRET: {{.Values.SANDBOX_COINBASE_API_KEY_B64SECRET | b64enc}}
+  COINBASE_API_KEY_NAME: {{.Values.SANDBOX_COINBASE_API_KEY_NAME | b64enc}}
+  COINBASE_API_KEY_PASSPHRASE: {{.Values.SANDBOX_COINBASE_API_KEY_PASSPHRASE | b64enc}}
+  {{- else}}
   COINBASE_API_KEY_B64SECRET: {{.Values.COINBASE_API_KEY_B64SECRET | b64enc}}
   COINBASE_API_KEY_NAME: {{.Values.COINBASE_API_KEY_NAME | b64enc}}
   COINBASE_API_KEY_PASSPHRASE: {{.Values.COINBASE_API_KEY_PASSPHRASE | b64enc}}
+  {{- end}}
