--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,8 @@ disallow_untyped_defs = False
 
 [pylint]
 disable=C0330, R0401, R0801, W0511
-good-names=T, h, i, j, f, x, y, s, t, pa, va, pb, vb, dt
-max-args=10
+good-names=T, h, i, j, f, x, y, s, t, id, pa, va, pb, vb, dt
+max-args=15
 max-attributes=20
 max-locals=30
 min-public-methods=0
